parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> INI
Rule 1     INI -> DS C DE
Rule 2     DS -> ETIQUETA START HEX
Rule 3     DE -> END ETIQUETA
Rule 4     DE -> END
Rule 5     C -> DC C
Rule 6     C -> CP C
Rule 7     C -> EPSILON
Rule 8     EPSILON -> <empty>
Rule 9     DC -> DBYTE
Rule 10    DC -> DIRECTIVA
Rule 11    DBYTE -> ETIQUETA BYTE BVALOR
Rule 12    DBYTE -> BYTE BVALOR
Rule 13    BVALOR -> CVALOR
Rule 14    BVALOR -> XVALOR
Rule 15    BVALOR -> error
Rule 16    DIRECTIVA -> ETIQUETA NEMDIRECTIVA
Rule 17    DIRECTIVA -> NEMDIRECTIVA
Rule 18    NEMDIRECTIVA -> NEMONICO HEX
Rule 19    NEMDIRECTIVA -> NEMONICO DECIMAL
Rule 20    NEMDIRECTIVA -> NEMONICO error
Rule 21    NEMONICO -> WORD
Rule 22    NEMONICO -> RESB
Rule 23    NEMONICO -> RESW
Rule 24    CP -> ETIQUETA CI
Rule 25    CP -> CI
Rule 26    CI -> INSTRUCCION ETIQUETA
Rule 27    CI -> INSTRUCCION ETIQUETA DIR
Rule 28    CI -> RSUB
Rule 29    INSTRUCCION -> ADD
Rule 30    INSTRUCCION -> AND
Rule 31    INSTRUCCION -> COMP
Rule 32    INSTRUCCION -> DIV
Rule 33    INSTRUCCION -> J
Rule 34    INSTRUCCION -> JEQ
Rule 35    INSTRUCCION -> JGT
Rule 36    INSTRUCCION -> JLT
Rule 37    INSTRUCCION -> JSUB
Rule 38    INSTRUCCION -> LDA
Rule 39    INSTRUCCION -> LDCH
Rule 40    INSTRUCCION -> LDL
Rule 41    INSTRUCCION -> LDX
Rule 42    INSTRUCCION -> MUL
Rule 43    INSTRUCCION -> OR
Rule 44    INSTRUCCION -> RD
Rule 45    INSTRUCCION -> TIX
Rule 46    INSTRUCCION -> STA
Rule 47    INSTRUCCION -> STCH
Rule 48    INSTRUCCION -> STL
Rule 49    INSTRUCCION -> STSW
Rule 50    INSTRUCCION -> STX
Rule 51    INSTRUCCION -> SUB
Rule 52    INSTRUCCION -> TD
Rule 53    INSTRUCCION -> WD

Terminals, with rules where they appear

ADD                  : 29
AND                  : 30
BYTE                 : 11 12
COMP                 : 31
CVALOR               : 13
DECIMAL              : 19
DIR                  : 27
DIV                  : 32
END                  : 3 4
ETIQUETA             : 2 3 11 16 24 26 27
HEX                  : 2 18
J                    : 33
JEQ                  : 34
JGT                  : 35
JLT                  : 36
JSUB                 : 37
LDA                  : 38
LDCH                 : 39
LDL                  : 40
LDX                  : 41
MUL                  : 42
OR                   : 43
RD                   : 44
RESB                 : 22
RESW                 : 23
RSUB                 : 28
STA                  : 46
START                : 2
STCH                 : 47
STL                  : 48
STSW                 : 49
STX                  : 50
SUB                  : 51
TD                   : 52
TIX                  : 45
WD                   : 53
WORD                 : 21
XVALOR               : 14
error                : 15 20

Nonterminals, with rules where they appear

BVALOR               : 11 12
C                    : 1 5 6
CI                   : 24 25
CP                   : 6
DBYTE                : 9
DC                   : 5
DE                   : 1
DIRECTIVA            : 10
DS                   : 1
EPSILON              : 7
INI                  : 0
INSTRUCCION          : 26 27
NEMDIRECTIVA         : 16 17
NEMONICO             : 18 19 20

Parsing method: LALR

state 0

    (0) S' -> . INI
    (1) INI -> . DS C DE
    (2) DS -> . ETIQUETA START HEX

    ETIQUETA        shift and go to state 1

    INI                            shift and go to state 2
    DS                             shift and go to state 3

state 1

    (2) DS -> ETIQUETA . START HEX

    START           shift and go to state 4


state 2

    (0) S' -> INI .



state 3

    (1) INI -> DS . C DE
    (5) C -> . DC C
    (6) C -> . CP C
    (7) C -> . EPSILON
    (9) DC -> . DBYTE
    (10) DC -> . DIRECTIVA
    (24) CP -> . ETIQUETA CI
    (25) CP -> . CI
    (8) EPSILON -> .
    (11) DBYTE -> . ETIQUETA BYTE BVALOR
    (12) DBYTE -> . BYTE BVALOR
    (16) DIRECTIVA -> . ETIQUETA NEMDIRECTIVA
    (17) DIRECTIVA -> . NEMDIRECTIVA
    (26) CI -> . INSTRUCCION ETIQUETA
    (27) CI -> . INSTRUCCION ETIQUETA DIR
    (28) CI -> . RSUB
    (18) NEMDIRECTIVA -> . NEMONICO HEX
    (19) NEMDIRECTIVA -> . NEMONICO DECIMAL
    (20) NEMDIRECTIVA -> . NEMONICO error
    (29) INSTRUCCION -> . ADD
    (30) INSTRUCCION -> . AND
    (31) INSTRUCCION -> . COMP
    (32) INSTRUCCION -> . DIV
    (33) INSTRUCCION -> . J
    (34) INSTRUCCION -> . JEQ
    (35) INSTRUCCION -> . JGT
    (36) INSTRUCCION -> . JLT
    (37) INSTRUCCION -> . JSUB
    (38) INSTRUCCION -> . LDA
    (39) INSTRUCCION -> . LDCH
    (40) INSTRUCCION -> . LDL
    (41) INSTRUCCION -> . LDX
    (42) INSTRUCCION -> . MUL
    (43) INSTRUCCION -> . OR
    (44) INSTRUCCION -> . RD
    (45) INSTRUCCION -> . TIX
    (46) INSTRUCCION -> . STA
    (47) INSTRUCCION -> . STCH
    (48) INSTRUCCION -> . STL
    (49) INSTRUCCION -> . STSW
    (50) INSTRUCCION -> . STX
    (51) INSTRUCCION -> . SUB
    (52) INSTRUCCION -> . TD
    (53) INSTRUCCION -> . WD
    (21) NEMONICO -> . WORD
    (22) NEMONICO -> . RESB
    (23) NEMONICO -> . RESW

    ETIQUETA        shift and go to state 11
    END             reduce using rule 8 (EPSILON -> .)
    BYTE            shift and go to state 35
    RSUB            shift and go to state 17
    ADD             shift and go to state 33
    AND             shift and go to state 38
    COMP            shift and go to state 28
    DIV             shift and go to state 13
    J               shift and go to state 29
    JEQ             shift and go to state 24
    JGT             shift and go to state 37
    JLT             shift and go to state 39
    JSUB            shift and go to state 32
    LDA             shift and go to state 15
    LDCH            shift and go to state 40
    LDL             shift and go to state 19
    LDX             shift and go to state 22
    MUL             shift and go to state 12
    OR              shift and go to state 45
    RD              shift and go to state 20
    TIX             shift and go to state 7
    STA             shift and go to state 25
    STCH            shift and go to state 5
    STL             shift and go to state 27
    STSW            shift and go to state 14
    STX             shift and go to state 18
    SUB             shift and go to state 8
    TD              shift and go to state 21
    WD              shift and go to state 6
    WORD            shift and go to state 16
    RESB            shift and go to state 34
    RESW            shift and go to state 30

    C                              shift and go to state 23
    DIRECTIVA                      shift and go to state 10
    DBYTE                          shift and go to state 41
    EPSILON                        shift and go to state 42
    INSTRUCCION                    shift and go to state 9
    CI                             shift and go to state 43
    DC                             shift and go to state 31
    NEMONICO                       shift and go to state 44
    NEMDIRECTIVA                   shift and go to state 26
    CP                             shift and go to state 36

state 4

    (2) DS -> ETIQUETA START . HEX

    HEX             shift and go to state 46


state 5

    (47) INSTRUCCION -> STCH .

    ETIQUETA        reduce using rule 47 (INSTRUCCION -> STCH .)


state 6

    (53) INSTRUCCION -> WD .

    ETIQUETA        reduce using rule 53 (INSTRUCCION -> WD .)


state 7

    (45) INSTRUCCION -> TIX .

    ETIQUETA        reduce using rule 45 (INSTRUCCION -> TIX .)


state 8

    (51) INSTRUCCION -> SUB .

    ETIQUETA        reduce using rule 51 (INSTRUCCION -> SUB .)


state 9

    (26) CI -> INSTRUCCION . ETIQUETA
    (27) CI -> INSTRUCCION . ETIQUETA DIR

    ETIQUETA        shift and go to state 47


state 10

    (10) DC -> DIRECTIVA .

    ETIQUETA        reduce using rule 10 (DC -> DIRECTIVA .)
    BYTE            reduce using rule 10 (DC -> DIRECTIVA .)
    RSUB            reduce using rule 10 (DC -> DIRECTIVA .)
    ADD             reduce using rule 10 (DC -> DIRECTIVA .)
    AND             reduce using rule 10 (DC -> DIRECTIVA .)
    COMP            reduce using rule 10 (DC -> DIRECTIVA .)
    DIV             reduce using rule 10 (DC -> DIRECTIVA .)
    J               reduce using rule 10 (DC -> DIRECTIVA .)
    JEQ             reduce using rule 10 (DC -> DIRECTIVA .)
    JGT             reduce using rule 10 (DC -> DIRECTIVA .)
    JLT             reduce using rule 10 (DC -> DIRECTIVA .)
    JSUB            reduce using rule 10 (DC -> DIRECTIVA .)
    LDA             reduce using rule 10 (DC -> DIRECTIVA .)
    LDCH            reduce using rule 10 (DC -> DIRECTIVA .)
    LDL             reduce using rule 10 (DC -> DIRECTIVA .)
    LDX             reduce using rule 10 (DC -> DIRECTIVA .)
    MUL             reduce using rule 10 (DC -> DIRECTIVA .)
    OR              reduce using rule 10 (DC -> DIRECTIVA .)
    RD              reduce using rule 10 (DC -> DIRECTIVA .)
    TIX             reduce using rule 10 (DC -> DIRECTIVA .)
    STA             reduce using rule 10 (DC -> DIRECTIVA .)
    STCH            reduce using rule 10 (DC -> DIRECTIVA .)
    STL             reduce using rule 10 (DC -> DIRECTIVA .)
    STSW            reduce using rule 10 (DC -> DIRECTIVA .)
    STX             reduce using rule 10 (DC -> DIRECTIVA .)
    SUB             reduce using rule 10 (DC -> DIRECTIVA .)
    TD              reduce using rule 10 (DC -> DIRECTIVA .)
    WD              reduce using rule 10 (DC -> DIRECTIVA .)
    WORD            reduce using rule 10 (DC -> DIRECTIVA .)
    RESB            reduce using rule 10 (DC -> DIRECTIVA .)
    RESW            reduce using rule 10 (DC -> DIRECTIVA .)
    END             reduce using rule 10 (DC -> DIRECTIVA .)


state 11

    (24) CP -> ETIQUETA . CI
    (11) DBYTE -> ETIQUETA . BYTE BVALOR
    (16) DIRECTIVA -> ETIQUETA . NEMDIRECTIVA
    (26) CI -> . INSTRUCCION ETIQUETA
    (27) CI -> . INSTRUCCION ETIQUETA DIR
    (28) CI -> . RSUB
    (18) NEMDIRECTIVA -> . NEMONICO HEX
    (19) NEMDIRECTIVA -> . NEMONICO DECIMAL
    (20) NEMDIRECTIVA -> . NEMONICO error
    (29) INSTRUCCION -> . ADD
    (30) INSTRUCCION -> . AND
    (31) INSTRUCCION -> . COMP
    (32) INSTRUCCION -> . DIV
    (33) INSTRUCCION -> . J
    (34) INSTRUCCION -> . JEQ
    (35) INSTRUCCION -> . JGT
    (36) INSTRUCCION -> . JLT
    (37) INSTRUCCION -> . JSUB
    (38) INSTRUCCION -> . LDA
    (39) INSTRUCCION -> . LDCH
    (40) INSTRUCCION -> . LDL
    (41) INSTRUCCION -> . LDX
    (42) INSTRUCCION -> . MUL
    (43) INSTRUCCION -> . OR
    (44) INSTRUCCION -> . RD
    (45) INSTRUCCION -> . TIX
    (46) INSTRUCCION -> . STA
    (47) INSTRUCCION -> . STCH
    (48) INSTRUCCION -> . STL
    (49) INSTRUCCION -> . STSW
    (50) INSTRUCCION -> . STX
    (51) INSTRUCCION -> . SUB
    (52) INSTRUCCION -> . TD
    (53) INSTRUCCION -> . WD
    (21) NEMONICO -> . WORD
    (22) NEMONICO -> . RESB
    (23) NEMONICO -> . RESW

    BYTE            shift and go to state 50
    RSUB            shift and go to state 17
    ADD             shift and go to state 33
    AND             shift and go to state 38
    COMP            shift and go to state 28
    DIV             shift and go to state 13
    J               shift and go to state 29
    JEQ             shift and go to state 24
    JGT             shift and go to state 37
    JLT             shift and go to state 39
    JSUB            shift and go to state 32
    LDA             shift and go to state 15
    LDCH            shift and go to state 40
    LDL             shift and go to state 19
    LDX             shift and go to state 22
    MUL             shift and go to state 12
    OR              shift and go to state 45
    RD              shift and go to state 20
    TIX             shift and go to state 7
    STA             shift and go to state 25
    STCH            shift and go to state 5
    STL             shift and go to state 27
    STSW            shift and go to state 14
    STX             shift and go to state 18
    SUB             shift and go to state 8
    TD              shift and go to state 21
    WD              shift and go to state 6
    WORD            shift and go to state 16
    RESB            shift and go to state 34
    RESW            shift and go to state 30

    CI                             shift and go to state 48
    INSTRUCCION                    shift and go to state 9
    NEMONICO                       shift and go to state 44
    NEMDIRECTIVA                   shift and go to state 49

state 12

    (42) INSTRUCCION -> MUL .

    ETIQUETA        reduce using rule 42 (INSTRUCCION -> MUL .)


state 13

    (32) INSTRUCCION -> DIV .

    ETIQUETA        reduce using rule 32 (INSTRUCCION -> DIV .)


state 14

    (49) INSTRUCCION -> STSW .

    ETIQUETA        reduce using rule 49 (INSTRUCCION -> STSW .)


state 15

    (38) INSTRUCCION -> LDA .

    ETIQUETA        reduce using rule 38 (INSTRUCCION -> LDA .)


state 16

    (21) NEMONICO -> WORD .

    HEX             reduce using rule 21 (NEMONICO -> WORD .)
    DECIMAL         reduce using rule 21 (NEMONICO -> WORD .)
    error           reduce using rule 21 (NEMONICO -> WORD .)


state 17

    (28) CI -> RSUB .

    ETIQUETA        reduce using rule 28 (CI -> RSUB .)
    BYTE            reduce using rule 28 (CI -> RSUB .)
    RSUB            reduce using rule 28 (CI -> RSUB .)
    ADD             reduce using rule 28 (CI -> RSUB .)
    AND             reduce using rule 28 (CI -> RSUB .)
    COMP            reduce using rule 28 (CI -> RSUB .)
    DIV             reduce using rule 28 (CI -> RSUB .)
    J               reduce using rule 28 (CI -> RSUB .)
    JEQ             reduce using rule 28 (CI -> RSUB .)
    JGT             reduce using rule 28 (CI -> RSUB .)
    JLT             reduce using rule 28 (CI -> RSUB .)
    JSUB            reduce using rule 28 (CI -> RSUB .)
    LDA             reduce using rule 28 (CI -> RSUB .)
    LDCH            reduce using rule 28 (CI -> RSUB .)
    LDL             reduce using rule 28 (CI -> RSUB .)
    LDX             reduce using rule 28 (CI -> RSUB .)
    MUL             reduce using rule 28 (CI -> RSUB .)
    OR              reduce using rule 28 (CI -> RSUB .)
    RD              reduce using rule 28 (CI -> RSUB .)
    TIX             reduce using rule 28 (CI -> RSUB .)
    STA             reduce using rule 28 (CI -> RSUB .)
    STCH            reduce using rule 28 (CI -> RSUB .)
    STL             reduce using rule 28 (CI -> RSUB .)
    STSW            reduce using rule 28 (CI -> RSUB .)
    STX             reduce using rule 28 (CI -> RSUB .)
    SUB             reduce using rule 28 (CI -> RSUB .)
    TD              reduce using rule 28 (CI -> RSUB .)
    WD              reduce using rule 28 (CI -> RSUB .)
    WORD            reduce using rule 28 (CI -> RSUB .)
    RESB            reduce using rule 28 (CI -> RSUB .)
    RESW            reduce using rule 28 (CI -> RSUB .)
    END             reduce using rule 28 (CI -> RSUB .)


state 18

    (50) INSTRUCCION -> STX .

    ETIQUETA        reduce using rule 50 (INSTRUCCION -> STX .)


state 19

    (40) INSTRUCCION -> LDL .

    ETIQUETA        reduce using rule 40 (INSTRUCCION -> LDL .)


state 20

    (44) INSTRUCCION -> RD .

    ETIQUETA        reduce using rule 44 (INSTRUCCION -> RD .)


state 21

    (52) INSTRUCCION -> TD .

    ETIQUETA        reduce using rule 52 (INSTRUCCION -> TD .)


state 22

    (41) INSTRUCCION -> LDX .

    ETIQUETA        reduce using rule 41 (INSTRUCCION -> LDX .)


state 23

    (1) INI -> DS C . DE
    (3) DE -> . END ETIQUETA
    (4) DE -> . END

    END             shift and go to state 52

    DE                             shift and go to state 51

state 24

    (34) INSTRUCCION -> JEQ .

    ETIQUETA        reduce using rule 34 (INSTRUCCION -> JEQ .)


state 25

    (46) INSTRUCCION -> STA .

    ETIQUETA        reduce using rule 46 (INSTRUCCION -> STA .)


state 26

    (17) DIRECTIVA -> NEMDIRECTIVA .

    ETIQUETA        reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    BYTE            reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    RSUB            reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    ADD             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    AND             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    COMP            reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    DIV             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    J               reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    JEQ             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    JGT             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    JLT             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    JSUB            reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    LDA             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    LDCH            reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    LDL             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    LDX             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    MUL             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    OR              reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    RD              reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    TIX             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    STA             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    STCH            reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    STL             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    STSW            reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    STX             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    SUB             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    TD              reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    WD              reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    WORD            reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    RESB            reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    RESW            reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)
    END             reduce using rule 17 (DIRECTIVA -> NEMDIRECTIVA .)


state 27

    (48) INSTRUCCION -> STL .

    ETIQUETA        reduce using rule 48 (INSTRUCCION -> STL .)


state 28

    (31) INSTRUCCION -> COMP .

    ETIQUETA        reduce using rule 31 (INSTRUCCION -> COMP .)


state 29

    (33) INSTRUCCION -> J .

    ETIQUETA        reduce using rule 33 (INSTRUCCION -> J .)


state 30

    (23) NEMONICO -> RESW .

    HEX             reduce using rule 23 (NEMONICO -> RESW .)
    DECIMAL         reduce using rule 23 (NEMONICO -> RESW .)
    error           reduce using rule 23 (NEMONICO -> RESW .)


state 31

    (5) C -> DC . C
    (5) C -> . DC C
    (6) C -> . CP C
    (7) C -> . EPSILON
    (9) DC -> . DBYTE
    (10) DC -> . DIRECTIVA
    (24) CP -> . ETIQUETA CI
    (25) CP -> . CI
    (8) EPSILON -> .
    (11) DBYTE -> . ETIQUETA BYTE BVALOR
    (12) DBYTE -> . BYTE BVALOR
    (16) DIRECTIVA -> . ETIQUETA NEMDIRECTIVA
    (17) DIRECTIVA -> . NEMDIRECTIVA
    (26) CI -> . INSTRUCCION ETIQUETA
    (27) CI -> . INSTRUCCION ETIQUETA DIR
    (28) CI -> . RSUB
    (18) NEMDIRECTIVA -> . NEMONICO HEX
    (19) NEMDIRECTIVA -> . NEMONICO DECIMAL
    (20) NEMDIRECTIVA -> . NEMONICO error
    (29) INSTRUCCION -> . ADD
    (30) INSTRUCCION -> . AND
    (31) INSTRUCCION -> . COMP
    (32) INSTRUCCION -> . DIV
    (33) INSTRUCCION -> . J
    (34) INSTRUCCION -> . JEQ
    (35) INSTRUCCION -> . JGT
    (36) INSTRUCCION -> . JLT
    (37) INSTRUCCION -> . JSUB
    (38) INSTRUCCION -> . LDA
    (39) INSTRUCCION -> . LDCH
    (40) INSTRUCCION -> . LDL
    (41) INSTRUCCION -> . LDX
    (42) INSTRUCCION -> . MUL
    (43) INSTRUCCION -> . OR
    (44) INSTRUCCION -> . RD
    (45) INSTRUCCION -> . TIX
    (46) INSTRUCCION -> . STA
    (47) INSTRUCCION -> . STCH
    (48) INSTRUCCION -> . STL
    (49) INSTRUCCION -> . STSW
    (50) INSTRUCCION -> . STX
    (51) INSTRUCCION -> . SUB
    (52) INSTRUCCION -> . TD
    (53) INSTRUCCION -> . WD
    (21) NEMONICO -> . WORD
    (22) NEMONICO -> . RESB
    (23) NEMONICO -> . RESW

    ETIQUETA        shift and go to state 11
    END             reduce using rule 8 (EPSILON -> .)
    BYTE            shift and go to state 35
    RSUB            shift and go to state 17
    ADD             shift and go to state 33
    AND             shift and go to state 38
    COMP            shift and go to state 28
    DIV             shift and go to state 13
    J               shift and go to state 29
    JEQ             shift and go to state 24
    JGT             shift and go to state 37
    JLT             shift and go to state 39
    JSUB            shift and go to state 32
    LDA             shift and go to state 15
    LDCH            shift and go to state 40
    LDL             shift and go to state 19
    LDX             shift and go to state 22
    MUL             shift and go to state 12
    OR              shift and go to state 45
    RD              shift and go to state 20
    TIX             shift and go to state 7
    STA             shift and go to state 25
    STCH            shift and go to state 5
    STL             shift and go to state 27
    STSW            shift and go to state 14
    STX             shift and go to state 18
    SUB             shift and go to state 8
    TD              shift and go to state 21
    WD              shift and go to state 6
    WORD            shift and go to state 16
    RESB            shift and go to state 34
    RESW            shift and go to state 30

    C                              shift and go to state 53
    DBYTE                          shift and go to state 41
    EPSILON                        shift and go to state 42
    INSTRUCCION                    shift and go to state 9
    NEMDIRECTIVA                   shift and go to state 26
    CI                             shift and go to state 43
    DIRECTIVA                      shift and go to state 10
    NEMONICO                       shift and go to state 44
    DC                             shift and go to state 31
    CP                             shift and go to state 36

state 32

    (37) INSTRUCCION -> JSUB .

    ETIQUETA        reduce using rule 37 (INSTRUCCION -> JSUB .)


state 33

    (29) INSTRUCCION -> ADD .

    ETIQUETA        reduce using rule 29 (INSTRUCCION -> ADD .)


state 34

    (22) NEMONICO -> RESB .

    HEX             reduce using rule 22 (NEMONICO -> RESB .)
    DECIMAL         reduce using rule 22 (NEMONICO -> RESB .)
    error           reduce using rule 22 (NEMONICO -> RESB .)


state 35

    (12) DBYTE -> BYTE . BVALOR
    (13) BVALOR -> . CVALOR
    (14) BVALOR -> . XVALOR
    (15) BVALOR -> . error

    CVALOR          shift and go to state 54
    XVALOR          shift and go to state 55
    error           shift and go to state 57

    BVALOR                         shift and go to state 56

state 36

    (6) C -> CP . C
    (5) C -> . DC C
    (6) C -> . CP C
    (7) C -> . EPSILON
    (9) DC -> . DBYTE
    (10) DC -> . DIRECTIVA
    (24) CP -> . ETIQUETA CI
    (25) CP -> . CI
    (8) EPSILON -> .
    (11) DBYTE -> . ETIQUETA BYTE BVALOR
    (12) DBYTE -> . BYTE BVALOR
    (16) DIRECTIVA -> . ETIQUETA NEMDIRECTIVA
    (17) DIRECTIVA -> . NEMDIRECTIVA
    (26) CI -> . INSTRUCCION ETIQUETA
    (27) CI -> . INSTRUCCION ETIQUETA DIR
    (28) CI -> . RSUB
    (18) NEMDIRECTIVA -> . NEMONICO HEX
    (19) NEMDIRECTIVA -> . NEMONICO DECIMAL
    (20) NEMDIRECTIVA -> . NEMONICO error
    (29) INSTRUCCION -> . ADD
    (30) INSTRUCCION -> . AND
    (31) INSTRUCCION -> . COMP
    (32) INSTRUCCION -> . DIV
    (33) INSTRUCCION -> . J
    (34) INSTRUCCION -> . JEQ
    (35) INSTRUCCION -> . JGT
    (36) INSTRUCCION -> . JLT
    (37) INSTRUCCION -> . JSUB
    (38) INSTRUCCION -> . LDA
    (39) INSTRUCCION -> . LDCH
    (40) INSTRUCCION -> . LDL
    (41) INSTRUCCION -> . LDX
    (42) INSTRUCCION -> . MUL
    (43) INSTRUCCION -> . OR
    (44) INSTRUCCION -> . RD
    (45) INSTRUCCION -> . TIX
    (46) INSTRUCCION -> . STA
    (47) INSTRUCCION -> . STCH
    (48) INSTRUCCION -> . STL
    (49) INSTRUCCION -> . STSW
    (50) INSTRUCCION -> . STX
    (51) INSTRUCCION -> . SUB
    (52) INSTRUCCION -> . TD
    (53) INSTRUCCION -> . WD
    (21) NEMONICO -> . WORD
    (22) NEMONICO -> . RESB
    (23) NEMONICO -> . RESW

    ETIQUETA        shift and go to state 11
    END             reduce using rule 8 (EPSILON -> .)
    BYTE            shift and go to state 35
    RSUB            shift and go to state 17
    ADD             shift and go to state 33
    AND             shift and go to state 38
    COMP            shift and go to state 28
    DIV             shift and go to state 13
    J               shift and go to state 29
    JEQ             shift and go to state 24
    JGT             shift and go to state 37
    JLT             shift and go to state 39
    JSUB            shift and go to state 32
    LDA             shift and go to state 15
    LDCH            shift and go to state 40
    LDL             shift and go to state 19
    LDX             shift and go to state 22
    MUL             shift and go to state 12
    OR              shift and go to state 45
    RD              shift and go to state 20
    TIX             shift and go to state 7
    STA             shift and go to state 25
    STCH            shift and go to state 5
    STL             shift and go to state 27
    STSW            shift and go to state 14
    STX             shift and go to state 18
    SUB             shift and go to state 8
    TD              shift and go to state 21
    WD              shift and go to state 6
    WORD            shift and go to state 16
    RESB            shift and go to state 34
    RESW            shift and go to state 30

    C                              shift and go to state 58
    DBYTE                          shift and go to state 41
    EPSILON                        shift and go to state 42
    INSTRUCCION                    shift and go to state 9
    NEMDIRECTIVA                   shift and go to state 26
    CI                             shift and go to state 43
    DIRECTIVA                      shift and go to state 10
    NEMONICO                       shift and go to state 44
    DC                             shift and go to state 31
    CP                             shift and go to state 36

state 37

    (35) INSTRUCCION -> JGT .

    ETIQUETA        reduce using rule 35 (INSTRUCCION -> JGT .)


state 38

    (30) INSTRUCCION -> AND .

    ETIQUETA        reduce using rule 30 (INSTRUCCION -> AND .)


state 39

    (36) INSTRUCCION -> JLT .

    ETIQUETA        reduce using rule 36 (INSTRUCCION -> JLT .)


state 40

    (39) INSTRUCCION -> LDCH .

    ETIQUETA        reduce using rule 39 (INSTRUCCION -> LDCH .)


state 41

    (9) DC -> DBYTE .

    ETIQUETA        reduce using rule 9 (DC -> DBYTE .)
    BYTE            reduce using rule 9 (DC -> DBYTE .)
    RSUB            reduce using rule 9 (DC -> DBYTE .)
    ADD             reduce using rule 9 (DC -> DBYTE .)
    AND             reduce using rule 9 (DC -> DBYTE .)
    COMP            reduce using rule 9 (DC -> DBYTE .)
    DIV             reduce using rule 9 (DC -> DBYTE .)
    J               reduce using rule 9 (DC -> DBYTE .)
    JEQ             reduce using rule 9 (DC -> DBYTE .)
    JGT             reduce using rule 9 (DC -> DBYTE .)
    JLT             reduce using rule 9 (DC -> DBYTE .)
    JSUB            reduce using rule 9 (DC -> DBYTE .)
    LDA             reduce using rule 9 (DC -> DBYTE .)
    LDCH            reduce using rule 9 (DC -> DBYTE .)
    LDL             reduce using rule 9 (DC -> DBYTE .)
    LDX             reduce using rule 9 (DC -> DBYTE .)
    MUL             reduce using rule 9 (DC -> DBYTE .)
    OR              reduce using rule 9 (DC -> DBYTE .)
    RD              reduce using rule 9 (DC -> DBYTE .)
    TIX             reduce using rule 9 (DC -> DBYTE .)
    STA             reduce using rule 9 (DC -> DBYTE .)
    STCH            reduce using rule 9 (DC -> DBYTE .)
    STL             reduce using rule 9 (DC -> DBYTE .)
    STSW            reduce using rule 9 (DC -> DBYTE .)
    STX             reduce using rule 9 (DC -> DBYTE .)
    SUB             reduce using rule 9 (DC -> DBYTE .)
    TD              reduce using rule 9 (DC -> DBYTE .)
    WD              reduce using rule 9 (DC -> DBYTE .)
    WORD            reduce using rule 9 (DC -> DBYTE .)
    RESB            reduce using rule 9 (DC -> DBYTE .)
    RESW            reduce using rule 9 (DC -> DBYTE .)
    END             reduce using rule 9 (DC -> DBYTE .)


state 42

    (7) C -> EPSILON .

    END             reduce using rule 7 (C -> EPSILON .)


state 43

    (25) CP -> CI .
